--- a/src/Resources/views/Menu/category.html.twig
+++ b/src/Resources/views/Menu/category.html.twig
@@ -51,11 +51,11 @@
                                         <div class="row">
                                             <div class="col-md-12 mb-4">
                                                 <!-- TABLAS -->
-                                                <table id="jqGrid" class= "table table-responsive-sm table-hover table-outline mb-0 ">
+                                                <table id="tree" class= "table table-responsive-sm table-hover table-outline mb-0 ">
                                                     
    
                                                 </table>
-                                                <div id="jqGridPager"></div>
+                                                <div id="pager"></div>
                                             </div>
                                         </div>
                                         <hr/>
@@ -73,110 +73,120 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{asset('vendors/js/jquery.jqGrid.js')}}"></script>
-    <script>
-		$.jgrid.defaults.width = 780;
-		$.jgrid.defaults.responsive = true;
-		$.jgrid.defaults.styleUI = 'Bootstrap';
-    </script>
-    <script type="text/javascript"> 
+    <script src="{{asset('vendors/js/jquery.jqGrid.min.js')}}"></script>
     
-        $(document).ready(function () {
-            $("#jqGrid").jqGrid({
-                url: 'http://localhost/guiconnection/public/test.json',
-                mtype: "GET",
-                datatype: "json",
-                page: 1,
-                colModel: [
-                    { label: 'Nombre del Menú', name: 'name', width: 150 },
-                    { label: 'Descripción', name: 'description', width: 150 }
-                ],
-                loadonce: true,
-                width: 780,
-                height: 250,
-                rowNum: 20,
-                subGrid: true, // set the subGrid property to true to show expand buttons for each row
-                subGridRowExpanded: showChildGrid, // javascript function that will take care of showing the child grid
-                pager: "#jqGridPager"
+    <script type="text/javascript"> 
+        
+        $(document).ready(function() {
+              jQuery('#tree').jqGrid({
+			"width":"780",
+			"hoverrows":false,
+			"viewrecords":false,
+			"gridview":true,
+			"url": "http://localhost/guiconnection/public/admin/{{cafeteria}}/resources/gql/menus",
+			"ExpandColumn":"name",
+			"height":"auto",
+			"sortname":"account_id",
+			"scrollrows":true,
+			"treeGrid":true,
+			"treedatatype":"json",
+			"treeGridModel":"adjacency",
+			"loadonce":true,
+			"rowNum":1000,
+			"treeReader":{
+				"parent_id_field":"parent_id",
+				"level_field":"level",
+				"leaf_field":"isLeaf",
+				"expanded_field":"expanded",
+				"loaded":"loaded",
+				"icon_field":"icon"
+			},
+                                                         "treeIcons" : {
+					"plus": "fa fa-angle-right",
+					"minus": "fa fa-angle-up",
+					"leaf" : "fa fa-circle-thin"
+			},
+			"datatype":"json",
+			"colModel":[
+				{
+					"name":"id",
+					"key":true,
+					"hidden":true
+				},{
+					"name":"name",
+					"label":"Nombre del Menú",
+					"width":170,
+					"editable":true
+				},{
+					"name":"description",
+					"label":"Descripción",
+					"width":170,
+					"editable":true
+				},{
+					"name":"parent_id",
+					"hidden":true
+				}
+			],
+			"pager":"#pager",
+                                                          "beforeRequest" : function() {
+                                                                                                console.log(this.p.postData.nodeid!=null);
+					if(this.p.postData.nodeid != null) {
+						var nid = parseInt(this.p.postData.nodeid,10);
+						console.log(nid);
+						if( nid > -1 ) {
+                                                                                                                                      this.p.url = "http://localhost/guiconnection/public/{{cafeteria}}/resources/gql/menus"
+							
+						}
+					}else{
+                                                                                                    console.log("else");
+                                                                                                }
+                                                        }
+		});
+                
+                jQuery("#tree").navGrid('#pager',{edit: false, add: false, del:false, search:false, refresh: false}).navButtonAdd('#pager',{
+                    buttonicon: "fa fa-plus",
+                    caption: '',
+                    onClickButton:function(){
+                            $.get("http://localhost/guiconnection/public/admin/{{cafeteria}}/menu", function(data){
+                                bootbox.dialog({
+                                    className:'modal',
+                                    closeButton:'false',
+                                    title:'Crear Menú',
+                                    message:data                                    
+                                }); 
+                            });
+                        },
+                    position: "last"
+            }).navButtonAdd('#pager',{
+                    buttonicon: "fa fa-trash",
+                    caption: '',
+                    onClickButton:function(){
+                            alert("aios");
+                        },
+                    position: "last"
+            }).navButtonAdd('#pager',{
+                    buttonicon: "fa fa-edit",
+                    caption: '',
+                    onClickButton:function(){
+                            alert("editar");
+                        },
+                    position: "last"
+            }).navButtonAdd('#pager',{
+                    buttonicon: "fa fa-retweet",
+                    caption: '',
+                    onClickButton:function(){
+                            alert("refrescar");
+                        },
+                    position: "last"
             });
-        });
-
-        // the event handler on expanding parent row receives two parameters
-        // the ID of the grid tow  and the primary key of the row
-        function showChildGrid(parentRowID, parentRowKey) {
-            consolelog("gosas");
-            var childGridID = parentRowID + "_table";
-            var childGridPagerID = parentRowID + "_pager";
-
-            // send the parent row primary key to the server so that we know which grid to show
-            var childGridURL = parentRowKey+".json";
-
-            // add a table and pager HTML elements to the parent grid row - we will render the child grid here
-            $('#' + parentRowID).append('<table id=' + childGridID + '></table><div id=' + childGridPagerID + ' class=scroll></div>');
-
-            $("#" + childGridID).jqGrid({
-                url: childGridURL,
-                mtype: "GET",
-                datatype: "json",
-                page: 1,
-                colModel: [
-                    { label: 'Order ID', name: 'OrderID', key: true, width: 75 },
-                    { label: 'Required Date', name: 'RequiredDate', width: 100 },
-                    { label: 'Ship Name', name: 'ShipName', width: 100 },
-                    { label: 'Ship City', name: 'ShipCity', width: 100 },
-                    { label: 'Freight', name: 'Freight', width: 75 }
-                ],
-                                loadonce: true,
-                width: '600',
-                height: '150',
-                subGrid: true, // set the subGrid property to true to show expand buttons for each row
-                subGridRowExpanded: showThirdLevelChildGrid, // javascript function that will take care of showing the child grid
-                pager: "#" + childGridPagerID
+		// nable add
+	
             });
-
-        }
-
-        // the event handler on expanding parent row receives two parameters
-        // the ID of the grid tow  and the primary key of the row
-        function showThirdLevelChildGrid(parentRowID, parentRowKey) {
-            var childGridID = parentRowID + "_table";
-            var childGridPagerID = parentRowID + "_pager";
-
-            // send the parent row primary key to the server so that we know which grid to show
-            var childGridURL = "child3.json";
-
-            // add a table and pager HTML elements to the parent grid row - we will render the child grid here
-            $('#' + parentRowID).append('<table id=' + childGridID + '></table><div id=' + childGridPagerID + ' class=scroll></div>');
-
-            $("#" + childGridID).jqGrid({
-                url: childGridURL,
-                mtype: "GET",
-                datatype: "json",
-                colModel: [
-                    { label: 'Order ID', name: 'OrderID', key: true, width: 75, hidden: true },
-                    { label: 'Product ID', name: 'ProductID', width: 100 },
-                                        { label: 'Quantity', name: 'Quantity', width: 100},
-                    {label: 'Unit Price', name: 'UnitPrice', width: 100},
-                    {
-                        label: 'Total',
-                        name: 'Total',
-                        width: 100,
-                        sortable: false,
-                        formatter: function (cellValue, options, row) {   // custom calculations at client side
-                            return parseFloat(row.Quantity) * parseFloat(row.UnitPrice);
-                        }
-                    }
-                ],
-                loadonce: true,
-                width: 'auto',
-                height: '150',
-                pager: "#" + childGridPagerID
-            });
-
-        }
-
     </script>
+     
+        
 {% endblock %}
 {% block stylesheets %}
     <link href="{{asset('vendors/css/ui.jqgrid-bootstrap.css')}}" rel="stylesheet">
+    <link href="{{asset('vendors/css/jquery.treegrid.css')}}" rel="stylesheet">
 {% endblock %}
