--- a/src/Resources/views/Menu/category.html.twig
+++ b/src/Resources/views/Menu/category.html.twig
@@ -23,27 +23,9 @@
                 <div class="col-lg-12 col-md-6 mb-4">
                     <ul class="nav nav-tabs" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link active" data-toggle="tab" href="#create" role="tab" aria-controls="tablas"><i class="fa fa-file-text-o"></i>Crear</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" data-toggle="tab" href="#exist" role="tab" aria-controls="graficas"><i class="fa fa-bar-chart"></i>Existentes</a>
                         </li>
                     </ul>
-                    <div class="tab-content">
-                        <div class="tab-pane active" id="create" role="tabpanel">
-                            <div class="animated fadeIn">
-                                <div class="card">
-                                    <div class="card-header">
-                                        <h4 class="card-title">Información del producto</h4>
-                                    </div>
-                                    <div class="card-body">
-                                        {{ form_start(formCreateMenu) }}
-                                        {{ form_end(formCreateMenu) }}
-                                        <hr/>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                         <div class="tab-pane" id="exist" role="tabpanel">
                             <div class="animated fadeIn">
                                 <div class="card">
@@ -62,9 +44,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        
-                    </div>                              
+                        </div>                     
                 </div>
             </div>
         </div>
@@ -86,12 +66,12 @@
 			"url": "http://localhost/guiconnection/public/admin/{{cafeteria}}/resources/gql/menus",
 			"ExpandColumn":"name",
 			"height":"auto",
-			"sortname":"account_id",
+			"sortname":"id",
 			"scrollrows":true,
 			"treeGrid":true,
 			"treedatatype":"json",
-			"treeGridModel":"adjacency",
-			"loadonce":true,
+			"treeGridModel":"nested",
+			"loadonce":false,
 			"rowNum":1000,
 			"treeReader":{
 				"parent_id_field":"parent_id",
@@ -129,17 +109,18 @@
 			],
 			"pager":"#pager",
                                                           "beforeRequest" : function() {
-                                                                                                console.log(this.p.postData.nodeid!=null);
+                                                                                                console.log(this.p.postData);
 					if(this.p.postData.nodeid != null) {
-						var nid = parseInt(this.p.postData.nodeid,10);
-						console.log(nid);
-						if( nid > -1 ) {
-                                                                                                                                      this.p.url = "http://localhost/guiconnection/public/{{cafeteria}}/resources/gql/menus"
-							
-						}
+						console.log(this.p.postData);
+                                                                                                                            this.p.url = "http://localhost/guiconnection/public/{{cafeteria}}/resources/gql/menus"
+						
 					}else{
                                                                                                     console.log("else");
                                                                                                 }
+                                                        },
+                                                        "onHeaderClick":function(){
+                                                                console.log("jalaHeader");
+                                                            
                                                         }
 		});
                 
@@ -150,7 +131,7 @@
                             $.get("http://localhost/guiconnection/public/admin/{{cafeteria}}/menu", function(data){
                                 bootbox.dialog({
                                     className:'modal',
-                                    closeButton:'false',
+                                    closeButton: false,
                                     title:'Crear Menú',
                                     message:data                                    
                                 }); 
