--- a/src/Resources/views/Menu/category.html.twig
+++ b/src/Resources/views/Menu/category.html.twig
@@ -128,7 +128,8 @@
                     buttonicon: "fa fa-edit",
                     caption: '',
                     onClickButton: function () {
-                        
+                        selRowId = $('#tree').jqGrid ('getGridParam', 'selrow');
+                        updateMenu('/guiconnection/public/admin/{{cafeteria}}/resources/menu/'+ selRowId);
                     },
                     position: "last"
                 }).navButtonAdd('#pager', {
