--- a/src/Resources/views/Menu/category.html.twig
+++ b/src/Resources/views/Menu/category.html.twig
@@ -5,7 +5,6 @@
 {% block classBody 'app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden aside-menu-off-canvas' %}
     {% block body %}
         <main class="main">
-
             <br>
             <div class="container-fluid">
                 <div class="animated fadeIn">
@@ -114,16 +113,7 @@
                     buttonicon: "fa fa-plus",
                     caption: '',
                     onClickButton: function () {
-                        $.get("http://localhost/guiconnection/public/admin/{{cafeteria}}/menu/create", function (data) {
-                            bootbox.dialog({
-                                className: 'modal',
-                                backdrop: true,
-                                title: 'Crear Menú',
-                                closeButton: false,
-                                message: data,
-                                onEscape: true
-                            });
-                        });
+                        addMenu("{{cafeteria}}");
                     },
                     position: "last"
                 }).navButtonAdd('#pager', {
@@ -131,7 +121,7 @@
                     caption: '',
                     onClickButton: function () {
                         selRowId = $('#tree').jqGrid ('getGridParam', 'selrow');
-                        updateMenu('/guiconnection/public/admin/{{cafeteria}}/resources/menu/'+ selRowId);
+                        updateMenu(selRowId);
                     },
                     position: "last"
                 }).navButtonAdd('#pager', {
